# ftp-hs

./: ftp-hs.cabal
nix/: hix.nix
src/: Client.hs  Server.hs
